# api/handler/supplier/create_supplier.go
@@ -16,11 +16,13 @@ import (
 //	@Tags			Supplier
 //	@Accept			json
 //	@Produce		json
-//	@Param			supplier	body		command.CreateSupplierRequest	true	"Supplier information"
-//	@Success		201			{object}	model.Supplier
-//	@Failure		400			{object}	fiber.Map
-//	@Failure		500			{object}	fiber.Map
-//	@Router			/api/v1/suppliers [post]
+//	@Param			supplier	body	command.CreateSupplierRequest	true	"Supplier information"
+//	@Success		201	{object}	model.Supplier
+//	@Failure		400	{object}	api.ErrorResponse
+//	@Failure		500	{object}	api.ErrorResponse
+//	@Router			/suppliers [post]
+var phoneRegex = regexp.MustCompile(`^[\d\s\-\+\(\)]+$`)
+
 func CreateSupplier(logger *slog.Logger) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		var req command.CreateSupplierRequest
