# docs/swagger.yaml
@@ -22,17 +22,6 @@ definitions:
       supplier_id:
         type: string
     type: object
-  command.CreateSupplierRequest:
-    properties:
-      address:
-        type: string
-      email:
-        type: string
-      name:
-        type: string
-      phone:
-        type: string
-    type: object
   command.StockAdjustRequest:
     properties:
       created_by:
@@ -99,6 +88,16 @@ definitions:
         type: string
       transaction:
         $ref: '#/definitions/model.StockTransaction'
+    type: object
+  command.UpdatePOStatusRequest:
+    properties:
+      created_by:
+        type: string
+      status:
+        $ref: '#/definitions/model.PurchaseOrderStatus'
+    required:
+    - created_by
+    - status
     type: object
   command.UpdatePurchaseOrderItemRequest:
     properties:
@@ -202,13 +201,11 @@ definitions:
         type: string
       phone:
         type: string
-    type: object
-  mini-erp-backend_api_service_category_command.CreateRequest:
-    properties:
-      description:
-        type: string
-      name:
-        type: string
+    required:
+    - address
+    - email
+    - name
+    - phone
     type: object
   mini-erp-backend_api_service_category_command.CreateRequest:
     properties:
@@ -1738,35 +1735,6 @@ paths:
           schema:
             $ref: '#/definitions/api.ErrorResponse'
       summary: Get all suppliers
-      tags:
-      - Supplier
-    post:
-      consumes:
-      - application/json
-      description: Create a new supplier with the provided information
-      parameters:
-      - description: Supplier information
-        in: body
-        name: supplier
-        required: true
-        schema:
-          $ref: '#/definitions/command.CreateSupplierRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/model.Supplier'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/api.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/api.ErrorResponse'
-      summary: Create a new supplier
       tags:
       - Supplier
   /suppliers/{id}:
